[gd_scene format=3 uid="uid://cpjofrgm72i3c"]

[ext_resource type="Script" uid="uid://561ep14ey5sv" path="res://entities/player/player.gd" id="1_abrql"]
[ext_resource type="Texture2D" uid="uid://dl5256ubgptw" path="res://assets/sprites/body.png" id="2_8fjmc"]
[ext_resource type="Script" uid="uid://skmpd278tn72" path="res://entities/animated_sprite/animated_sprite.gd" id="3_sglur"]
[ext_resource type="Script" uid="uid://dxqaagfsb2ut8" path="res://entities/state/state_machine.gd" id="4_fkugw"]
[ext_resource type="Script" uid="uid://tfy2e576agq2" path="res://entities/player/states/idle.gd" id="5_8fjmc"]
[ext_resource type="Script" uid="uid://b8egebvgtmh" path="res://entities/player/states/run.gd" id="6_8fjmc"]
[ext_resource type="Script" uid="uid://bbqt8pmmhv087" path="res://entities/player/states/crouch.gd" id="7_qiwj3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ce7rj"]
atlas = ExtResource("2_8fjmc")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxti3"]
atlas = ExtResource("2_8fjmc")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7i0u"]
atlas = ExtResource("2_8fjmc")
region = Rect2(256, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8y57"]
atlas = ExtResource("2_8fjmc")
region = Rect2(320, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3iyh"]
atlas = ExtResource("2_8fjmc")
region = Rect2(384, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_epti5"]
atlas = ExtResource("2_8fjmc")
region = Rect2(448, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvsls"]
atlas = ExtResource("2_8fjmc")
region = Rect2(512, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bh7h1"]
atlas = ExtResource("2_8fjmc")
region = Rect2(576, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgonf"]
atlas = ExtResource("2_8fjmc")
region = Rect2(640, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6526"]
atlas = ExtResource("2_8fjmc")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ferh"]
atlas = ExtResource("2_8fjmc")
region = Rect2(64, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ql8an"]
atlas = ExtResource("2_8fjmc")
region = Rect2(128, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdubi"]
atlas = ExtResource("2_8fjmc")
region = Rect2(192, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rf3cf"]
atlas = ExtResource("2_8fjmc")
region = Rect2(256, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmxbq"]
atlas = ExtResource("2_8fjmc")
region = Rect2(320, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_muhy7"]
atlas = ExtResource("2_8fjmc")
region = Rect2(384, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6i6p"]
atlas = ExtResource("2_8fjmc")
region = Rect2(448, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0axog"]
atlas = ExtResource("2_8fjmc")
region = Rect2(512, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_50oce"]
atlas = ExtResource("2_8fjmc")
region = Rect2(576, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yl660"]
atlas = ExtResource("2_8fjmc")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl571"]
atlas = ExtResource("2_8fjmc")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xl84u"]
atlas = ExtResource("2_8fjmc")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysuoh"]
atlas = ExtResource("2_8fjmc")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwoi3"]
atlas = ExtResource("2_8fjmc")
region = Rect2(384, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysqju"]
atlas = ExtResource("2_8fjmc")
region = Rect2(448, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c82ai"]
atlas = ExtResource("2_8fjmc")
region = Rect2(512, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ql7u7"]
atlas = ExtResource("2_8fjmc")
region = Rect2(640, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kotnb"]
atlas = ExtResource("2_8fjmc")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ytk4"]
atlas = ExtResource("2_8fjmc")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybixo"]
atlas = ExtResource("2_8fjmc")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pngin"]
atlas = ExtResource("2_8fjmc")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbg83"]
atlas = ExtResource("2_8fjmc")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwmfb"]
atlas = ExtResource("2_8fjmc")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wr8n"]
atlas = ExtResource("2_8fjmc")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfh67"]
atlas = ExtResource("2_8fjmc")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0rcx"]
atlas = ExtResource("2_8fjmc")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_27i1b"]
atlas = ExtResource("2_8fjmc")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_auncn"]
atlas = ExtResource("2_8fjmc")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0o87h"]
atlas = ExtResource("2_8fjmc")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykjgj"]
atlas = ExtResource("2_8fjmc")
region = Rect2(576, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5cch"]
atlas = ExtResource("2_8fjmc")
region = Rect2(640, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jeiu"]
atlas = ExtResource("2_8fjmc")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rr4b"]
atlas = ExtResource("2_8fjmc")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys4l6"]
atlas = ExtResource("2_8fjmc")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_773mb"]
atlas = ExtResource("2_8fjmc")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmw5n"]
atlas = ExtResource("2_8fjmc")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3xs2"]
atlas = ExtResource("2_8fjmc")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nd15u"]
atlas = ExtResource("2_8fjmc")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l65la"]
atlas = ExtResource("2_8fjmc")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5xyn"]
atlas = ExtResource("2_8fjmc")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qep3r"]
atlas = ExtResource("2_8fjmc")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8umk"]
atlas = ExtResource("2_8fjmc")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4ss6"]
atlas = ExtResource("2_8fjmc")
region = Rect2(576, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6mjt"]
atlas = ExtResource("2_8fjmc")
region = Rect2(640, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_msw6w"]
atlas = ExtResource("2_8fjmc")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_07tda"]
atlas = ExtResource("2_8fjmc")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_07848"]
atlas = ExtResource("2_8fjmc")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xw2gt"]
atlas = ExtResource("2_8fjmc")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdwpe"]
atlas = ExtResource("2_8fjmc")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n5ve"]
atlas = ExtResource("2_8fjmc")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouruq"]
atlas = ExtResource("2_8fjmc")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f84yn"]
atlas = ExtResource("2_8fjmc")
region = Rect2(640, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5iu8"]
atlas = ExtResource("2_8fjmc")
region = Rect2(512, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yx2e"]
atlas = ExtResource("2_8fjmc")
region = Rect2(576, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kk37"]
atlas = ExtResource("2_8fjmc")
region = Rect2(640, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxkuq"]
atlas = ExtResource("2_8fjmc")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvcw7"]
atlas = ExtResource("2_8fjmc")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8w8a"]
atlas = ExtResource("2_8fjmc")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_drdns"]
atlas = ExtResource("2_8fjmc")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuq6a"]
atlas = ExtResource("2_8fjmc")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgttx"]
atlas = ExtResource("2_8fjmc")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_icwyy"]
atlas = ExtResource("2_8fjmc")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_10641"]
atlas = ExtResource("2_8fjmc")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cnes"]
atlas = ExtResource("2_8fjmc")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4cl8"]
atlas = ExtResource("2_8fjmc")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjqdr"]
atlas = ExtResource("2_8fjmc")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_887kr"]
atlas = ExtResource("2_8fjmc")
region = Rect2(512, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_26q78"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce7rj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxti3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7i0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8y57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3iyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epti5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvsls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bh7h1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgonf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6526")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ferh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ql8an")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdubi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rf3cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmxbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muhy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6i6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0axog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50oce")
}],
"loop": true,
"name": &"aim",
"speed": 15.151515151515152
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yl660")
}],
"loop": true,
"name": &"crouch",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl571")
}, {
"duration": 1.32,
"texture": SubResource("AtlasTexture_xl84u")
}, {
"duration": 1.32,
"texture": SubResource("AtlasTexture_ysuoh")
}],
"loop": false,
"name": &"crouch_to_idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwoi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysqju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c82ai")
}],
"loop": true,
"name": &"down",
"speed": 15.151515151515152
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ql7u7")
}],
"loop": false,
"name": &"hurt",
"speed": 15.151515151515152
}, {
"frames": [{
"duration": 3.0120482,
"texture": SubResource("AtlasTexture_kotnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ytk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybixo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pngin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbg83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwmfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wr8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfh67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0rcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27i1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auncn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0o87h")
}],
"loop": true,
"name": &"idle",
"speed": 12.048192771084338
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykjgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5cch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jeiu")
}, {
"duration": 1.32,
"texture": SubResource("AtlasTexture_4rr4b")
}],
"loop": false,
"name": &"land",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys4l6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_773mb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmw5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3xs2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nd15u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l65la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5xyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qep3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8umk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4ss6")
}],
"loop": true,
"name": &"run",
"speed": 15.151515151515152
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6mjt")
}, {
"duration": 1.32,
"texture": SubResource("AtlasTexture_msw6w")
}, {
"duration": 1.32,
"texture": SubResource("AtlasTexture_07tda")
}, {
"duration": 1.32,
"texture": SubResource("AtlasTexture_07848")
}],
"loop": false,
"name": &"stop",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xw2gt")
}],
"loop": false,
"name": &"to_crouch",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdwpe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n5ve")
}],
"loop": false,
"name": &"to_fall",
"speed": 15.151515151515152
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouruq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f84yn")
}],
"loop": false,
"name": &"to_run",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5iu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yx2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kk37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxkuq")
}],
"loop": false,
"name": &"turn",
"speed": 15.151515151515152
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvcw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8w8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drdns")
}],
"loop": true,
"name": &"up",
"speed": 15.151515151515152
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuq6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgttx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icwyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10641")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cnes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4cl8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjqdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_887kr")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_symyc"]
size = Vector2(8, 24)

[node name="Player" type="CharacterBody2D" unique_id=407663167]
collision_layer = 0
script = ExtResource("1_abrql")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="." unique_id=1265583741]
position = Vector2(0, -21)
sprite_frames = SubResource("SpriteFrames_26q78")
animation = &"aim"
script = ExtResource("3_sglur")
transitions = Dictionary[StringName, StringName]({
&"crouch_to_idle": &"idle",
&"land": &"idle",
&"stop": &"idle",
&"to_crouch": &"crouch",
&"to_fall": &"down",
&"to_run": &"run",
&"turn": &"run"
})
metadata/_custom_type_script = "uid://skmpd278tn72"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1611707814]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_symyc")

[node name="StateMachine" type="Node" parent="." unique_id=2074161636]
script = ExtResource("4_fkugw")
metadata/_custom_type_script = "uid://dxqaagfsb2ut8"

[node name="PlayerIdleState" type="Node" parent="StateMachine" unique_id=773474783]
script = ExtResource("5_8fjmc")
metadata/_custom_type_script = "uid://tfy2e576agq2"

[node name="PlayerRunState" type="Node" parent="StateMachine" unique_id=862284830]
script = ExtResource("6_8fjmc")
metadata/_custom_type_script = "uid://b8egebvgtmh"

[node name="PlayerCrouchState" type="Node" parent="StateMachine" unique_id=1667583221]
script = ExtResource("7_qiwj3")
metadata/_custom_type_script = "uid://bbqt8pmmhv087"
